--- a/AlloyML.ipynb
+++ b/AlloyML.ipynb
@@ -8211,16 +8211,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "CATl2TUJvyMY",
-        "outputId": "7ba71e40-7379-43fd-d42c-0d89074ea77d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7ba71e40-7379-43fd-d42c-0d89074ea77d"
       },
       "source": [
         "!git clone https://github.com/joseph42440/AlloyML_Public"
       ],
       "id": "CATl2TUJvyMY",
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -8240,9 +8240,65 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "h5O5kVpb5957",
+        "outputId": "391dce93-3bf3-48f1-ac8b-056c0c8c2b20",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 17
+        }
+      },
+      "source": [
+        "%%html\n",
+        "<script>\n",
+        "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
+        "    require(\n",
+        "        ['base/js/namespace', 'jquery'], \n",
+        "        function(jupyter, $) {\n",
+        "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+        "                console.log(\"Auto-running all cells-below...\");\n",
+        "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+        "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+        "            });\n",
+        "        }\n",
+        "    );\n",
+        "</script>"
+      ],
+      "id": "h5O5kVpb5957",
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/html": [
+              "<script>\n",
+              "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
+              "    require(\n",
+              "        ['base/js/namespace', 'jquery'], \n",
+              "        function(jupyter, $) {\n",
+              "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
+              "                console.log(\"Auto-running all cells-below...\");\n",
+              "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
+              "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
+              "            });\n",
+              "        }\n",
+              "    );\n",
+              "</script>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "scrolled": false,
         "id": "20963143",
-        "outputId": "5b978324-4b1f-445d-a2bc-d1e75d9bd4fe",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 625,
@@ -8549,7 +8605,8 @@
             "981744d043344800bb32a8015ea56c9f",
             "5bb9568a2a7c40e98eb1b7fafcd62142"
           ]
-        }
+        },
+        "outputId": "5b978324-4b1f-445d-a2bc-d1e75d9bd4fe"
       },
       "source": [
         "from AlloyML_Public.optimiserGUI import *\n",
@@ -8558,7 +8615,7 @@
         "GUI_inputs = generateGUI(mode)\n"
       ],
       "id": "20963143",
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -8582,10 +8639,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "4c3a86bd",
-        "outputId": "150c2413-0b71-4f55-e90d-693be2bc6fd0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "150c2413-0b71-4f55-e90d-693be2bc6fd0"
       },
       "source": [
         "settings = extractSettingsFromGUI(GUI_inputs, mode)\n",
