--- a/AlloyML.ipynb
+++ b/AlloyML.ipynb
@@ -8211,88 +8211,14 @@
       "cell_type": "code",
       "metadata": {
         "id": "CATl2TUJvyMY",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "7ba71e40-7379-43fd-d42c-0d89074ea77d"
+        "collapsed": true
       },
       "source": [
-        "!git clone https://github.com/joseph42440/AlloyML_Public"
+        "!git clone https://github.com/joseph42440/AlloyML_Public &> /dev/null "
       ],
       "id": "CATl2TUJvyMY",
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Cloning into 'AlloyML_Public'...\n",
-            "remote: Enumerating objects: 33, done.\u001b[K\n",
-            "remote: Counting objects:   3% (1/33)\u001b[K\rremote: Counting objects:   6% (2/33)\u001b[K\rremote: Counting objects:   9% (3/33)\u001b[K\rremote: Counting objects:  12% (4/33)\u001b[K\rremote: Counting objects:  15% (5/33)\u001b[K\rremote: Counting objects:  18% (6/33)\u001b[K\rremote: Counting objects:  21% (7/33)\u001b[K\rremote: Counting objects:  24% (8/33)\u001b[K\rremote: Counting objects:  27% (9/33)\u001b[K\rremote: Counting objects:  30% (10/33)\u001b[K\rremote: Counting objects:  33% (11/33)\u001b[K\rremote: Counting objects:  36% (12/33)\u001b[K\rremote: Counting objects:  39% (13/33)\u001b[K\rremote: Counting objects:  42% (14/33)\u001b[K\rremote: Counting objects:  45% (15/33)\u001b[K\rremote: Counting objects:  48% (16/33)\u001b[K\rremote: Counting objects:  51% (17/33)\u001b[K\rremote: Counting objects:  54% (18/33)\u001b[K\rremote: Counting objects:  57% (19/33)\u001b[K\rremote: Counting objects:  60% (20/33)\u001b[K\rremote: Counting objects:  63% (21/33)\u001b[K\rremote: Counting objects:  66% (22/33)\u001b[K\rremote: Counting objects:  69% (23/33)\u001b[K\rremote: Counting objects:  72% (24/33)\u001b[K\rremote: Counting objects:  75% (25/33)\u001b[K\rremote: Counting objects:  78% (26/33)\u001b[K\rremote: Counting objects:  81% (27/33)\u001b[K\rremote: Counting objects:  84% (28/33)\u001b[K\rremote: Counting objects:  87% (29/33)\u001b[K\rremote: Counting objects:  90% (30/33)\u001b[K\rremote: Counting objects:  93% (31/33)\u001b[K\rremote: Counting objects:  96% (32/33)\u001b[K\rremote: Counting objects: 100% (33/33)\u001b[K\rremote: Counting objects: 100% (33/33), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (28/28), done.\u001b[K\n",
-            "remote: Total 33 (delta 12), reused 8 (delta 3), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (33/33), done.\n",
-            "Checking out files: 100% (8/8), done.\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "h5O5kVpb5957",
-        "outputId": "391dce93-3bf3-48f1-ac8b-056c0c8c2b20",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 17
-        }
-      },
-      "source": [
-        "%%html\n",
-        "<script>\n",
-        "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
-        "    require(\n",
-        "        ['base/js/namespace', 'jquery'], \n",
-        "        function(jupyter, $) {\n",
-        "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
-        "                console.log(\"Auto-running all cells-below...\");\n",
-        "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
-        "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
-        "            });\n",
-        "        }\n",
-        "    );\n",
-        "</script>"
-      ],
-      "id": "h5O5kVpb5957",
       "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/html": [
-              "<script>\n",
-              "    // AUTORUN ALL CELLS ON NOTEBOOK-LOAD!\n",
-              "    require(\n",
-              "        ['base/js/namespace', 'jquery'], \n",
-              "        function(jupyter, $) {\n",
-              "            $(jupyter.events).on(\"kernel_ready.Kernel\", function () {\n",
-              "                console.log(\"Auto-running all cells-below...\");\n",
-              "                jupyter.actions.call('jupyter-notebook:run-all-cells-below');\n",
-              "                jupyter.actions.call('jupyter-notebook:save-notebook');\n",
-              "            });\n",
-              "        }\n",
-              "    );\n",
-              "</script>"
-            ],
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
